ie 레이어 패치

--- a/src/main/resources/templates/page/service-inbox.html
+++ b/src/main/resources/templates/page/service-inbox.html
@@ -306,7 +306,7 @@
 
 <div layout:fragment="layer">
     <!-- 팝업: 상담거절 -->
-    <div class="layerWrapper layerSizeM" id="popLayerServiceResultRefuse">
+    <div class="layerWrapper layerSizeM" id="popLayerServiceResultRefuse" style="display:inline-block !important">
         <div class="layerHeader">
             <strong>상담 거절</strong>
             <a href="#" @click="closebtnInit" class="btnClose popLayerServiceResultRefuse_close">
@@ -345,7 +345,7 @@
     </div>
 
     <!-- 팝업: 개통결과등록 -->
-    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inherit !important">
+    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inline-block !important">
         <div class="layerHeader">
             <strong>상담결과저장</strong>
             <a href="#;" @click="closebtnInit" class="btnClose popLayerServiceResultAdd_close">
