--- a/src/main/resources/templates/page/service-status.html
+++ b/src/main/resources/templates/page/service-status.html
@@ -303,7 +303,7 @@
 
 <div layout:fragment="layer">
     <!-- 팝업: 개통결과등록 -->
-    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inherit !important">
+    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inline-block !important">
         <div class="layerHeader">
             <strong v-if>개통결과 수정</strong>
             <a href="#" class="btnClose popLayerServiceResultAdd_close"><img src="../images/cmmn/btn-layer-close.png"
