--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -394,7 +394,7 @@
 
 <div layout:fragment="layer">
     <!-- 팝업: 개통결과등록 -->
-    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inherit !important">
+    <div class="layerWrapper layerSizeM" id="popLayerServiceResultAdd" style="display:inline-block !important">
         <div class="layerHeader">
             <strong>개통결과등록</strong>
             <a href="#" class="btnClose popLayerServiceResultAdd_close"><img src="../images/cmmn/btn-layer-close.png"
