--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -176,7 +176,7 @@
                                     <a
                                         href="#;"
                                         class="btnS colorWhite"
-                                        @click="openDaumPostCode"
+                                        onclick="execDaumPostcode()"
                                     >
                                         <span>주소 검색</span>
                                     </a>
@@ -308,8 +308,10 @@
                     document.getElementById('bnZipcode').value = data.zonecode;
                     document.getElementById('bnAddrSido').value = data.sido;
                     document.getElementById('bnAddrSigg').value = data.sigungu;
+
                     document.getElementById("bnAddrStr").value = roadAddr;
                     document.getElementById("bnAddrBldg").value = extraRoadAddr;
+                    app.daumPostCodeCB(roadAddr, extraRoadAddr);
                 }
             }).open();
         }
@@ -342,8 +344,9 @@
                 }
             },
             methods: {
-                openDaumPostCode: function() {
-                    execDaumPostcode()
+                daumPostCodeCB: function(str, bldg) {
+                    this.bnAddrStr = str
+                    this.bnAddrBldg = bldg
                 },
                 getShopInfo: function() {
                     this.initDone = false
